重构v3版本知识库检索相关功能